ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/08_undeclared_record.lava
Foo x = new Foo(1, 2);
